# zipar

./: .gitignore  LICENSE  Makefile  README.md  zipar.opam
.github/workflows/: test.yaml
lib/: cmd.ml  dune  zipar.ml
test/: dune  test_zipar.ml
